[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "fractal_tree"
version = "0.1.0"
description = "Create a fractal tree over a surface discretized by triangles"
authors = [{name = "Francisco Sahli Costabal" },{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy",
    "scipy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pdbpp",
    "ipython",
    "bump2version",
    "pre-commit",
]
docs = [
   "jupyter-book",
   "jupytext",
   "plotly",
   "ipython<8.7.0"
]
all = [
   "fractal_tree[test]",
   "fractal_tree[docs]",
   "fractal_tree[dev]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fractal_tree = ["drug_factors.json"]

[tool.pytest.ini_options]
addopts = [
   "--import-mode=importlib",
   "--cov=fractal_tree",
   "--cov-report=html",
   "--cov-report=term-missing",
   "-v"
]

testpaths = [
    "tests"
]
